Fixed #28699 - REMOTE_USER issues with CSRF
Delegate CSRF token rotation on login to middleware instead of
django.auth.login and clarify documentation.

--- a/AUTHORS
+++ b/AUTHORS
@@ -756,6 +756,7 @@ answer newbie questions, and generally made Django that much better:
     Rob Hudson <https://rob.cogit8.org/>
     Rob Nguyen <tienrobertnguyenn@gmail.com>
     Robin Munn <http://www.geekforgod.com/>
+    Rodrigo Gadea <matematica.a3k@gmail.com>
     Rodrigo Pinheiro Marques de Araújo <fenrrir@gmail.com>
     Romain Garrigues <romain.garrigues.cs@gmail.com>
     Ronny Haryanto <https://ronny.haryan.to/>
